# MGARD

./: .gitignore  BP_Encoder_Perf.sh  CMakeLists.txt  HP_MDR_Perf.sh  Lossless_Perf.sh  QoI_JHTDB.sh  QoI_NYX.sh  QoI_mini-JHTDB.sh  test.sh
build_scripts/: build_mgard_adios2_cuda_summit.sh  build_mgard_adios2_hip_frontier.sh  build_mgard_apple_silicon.sh  build_mgard_cuda_ampere.sh  build_mgard_cuda_andes.sh  build_mgard_cuda_hopper.sh  build_mgard_cuda_legacy.sh  build_mgard_cuda_summit.sh  build_mgard_cuda_turing.sh  build_mgard_hip_frontier.sh  build_mgard_openmp_cpu.sh  build_mgard_serial.sh  build_mgard_sycl_gen9.sh  build_mgard_sycl_x86.sh  build_mgard_sycl_xehp.sh
examples/gpu-cuda/FlyingEdges/: FlyingEdges.cu  FlyingEdges.hpp
examples/lambda/: LagrangeOptimizer.cpp  TestXGCDecompress.cpp  TestXGCPostProcessing.cpp
examples/mgard-x/CompressXgcData/: TestXGCAbsoluteError.cpp
examples/roi/: mgard_roi.cpp
include/: MGARDConfig.hpp.in  TensorMassMatrix.tpp  compress.hpp  compress.tpp  compress_cuda.hpp
include/cuda/: Array.hpp  CommonInternal.h  IterativeProcessingKernel.hpp  IterativeProcessingKernel3D.hpp
include/mgard/: format.hpp
include/mgard-x/CompressionHighLevel/: CPUPipelines.hpp  CompressionHighLevel.hpp  GPUPipelines.hpp
include/mgard-x/CompressionLowLevel/: CompressionLowLevel.hpp  Compressor.h  Compressor.hpp  HybridHierarchyCompressor.h  HybridHierarchyCompressor.hpp
include/mgard-x/Config/: Config.h
include/mgard-x/DataRefactoring/: HybridHierarchyDataRefactor.hpp
include/mgard-x/DataRefactoring/BlockMultiDimension/: BlockDataRefactoring.hpp
include/mgard-x/DataRefactoring/Blockwise/: DataRefactoring.h  DataRefactoring.hpp
include/mgard-x/DataRefactoring/InCacheBlock/: DataRefactoring.hpp  Decompose8x8x8.hpp  IndexTable3x3x3.hpp  IndexTable5x5x5.hpp  IndexTable8x8x8.hpp  Recompose8x8x8.hpp
include/mgard-x/DataRefactoring/MultiDimension/: DataRefactoring.hpp
include/mgard-x/DataRefactoring/SingleDimension/: DataRefactoring.hpp
include/mgard-x/DomainDecomposer/: DomainDecomposer.hpp
include/mgard-x/Hierarchy/: Hierarchy.hpp
include/mgard-x/Lossless/: CPU.hpp  Cascaded.hpp  LZ4.hpp  Lossless.hpp  Zstd.hpp
include/mgard-x/Lossless/LZ4/: LZ4.hpp  (+2 more)
include/mgard-x/MDRHighLevel/: MDRDataHighLevel.hpp  MDRHighLevel.hpp  MaxAbsIndexKernel.hpp  QoIKernel.hpp  ReconstructPipeline.hpp  ReconstructPipelineQoI.hpp  RefactorPipeline.hpp  qoi_kernel.hpp  qoi_kernel.inl
include/mgard-x/Metadata/: Metadata.hpp
include/mgard-x/Quantization/: HybridHierarchyLinearQuantization.hpp  LinearQuantization.hpp
include/mgard-x/RuntimeX/: RuntimeX.h
include/mgard-x/Utilities/: Types.h
include/mgard/cli/: arguments.hpp
include/mgard/unstructured/: EnumeratedMeshRange.hpp  IndicatorInput.hpp  MeshHierarchy.hpp  MeshLevel.hpp  MultilevelCoefficientQuantizer.hpp  MultilevelCoefficientQuantizer.tpp  SituatedCoefficientRange.hpp
scripts/: generate_dimension_switch.py
src/: mgard.proto
src/cuda/: Array.cu  LosslessCompression.cu  MgardCudaExec.cpp
src/cuda/ParallelHuffman/: huffman_workflow.cu
src/mgard/: CMakeLists.txt  compress.cpp  compress_internal.cpp  compressors.cpp  format.cpp
src/mgard-x/CompressionHighLevel/: DynamicAPI.cpp
src/mgard-x/Config/: Config.cpp
src/mgard-x/Executables/: mdr-x-qoi.cpp  mdr-x.cpp  mgard-x-autotuner.cpp  mgard-x.cpp  pmdr-x-qoi-io.cpp  pmdr-x-qoi.cpp
src/mgard-x/MDRHighLevel/: CMakeLists.txt  DynamicAPI.cpp  qoi_kernel.cu
src/mgard-x/Metadata/: Metadata.cpp
src/mgard/cli/: arguments.cpp  cli_internal.cpp  cmdline.cpp  executable.cpp  output.cpp
src/mgard/unstructured/: EnumeratedMeshRange.cpp  IndicatorInput.cpp  LinearOperator.cpp  MassMatrix.cpp  MeshHierarchy.cpp  MeshLevel.cpp  MeshRefiner.cpp  UniformMeshHierarchy.cpp  UniformMeshRefiner.cpp  UniformRestriction.cpp  estimators.cpp  indicators.cpp  measure.cpp  norms.cpp  pcg.cpp
tests/: CMakeLists.txt
tests/include/: testing_random.tpp  testing_utilities.hpp
tests/mgard/: CMakeLists.txt
tests/mgard-x/: CMakeLists.txt
tests/mgard-x/src/: test_BlockDelta.cpp.in  test_ComposedHuffmanLZ4.cpp.in  test_ComposedHuffmanZstd.cpp.in  test_Compressor.cpp.in  test_DataRefactoring.cpp.in  test_Huffman.cpp.in  test_LZ4.cpp.in  test_RLE.cpp.in  test_Rans.cpp.in  test_ZeroRLE.cpp.in  test_Zstd.cpp.in
tests/mgard/include/: testing_random.hpp
tests/mgard/src/: test_CompressedDataset.cpp  test_LinearQuantizer.cpp  test_TensorLinearOperator.cpp  test_TensorMassMatrix.cpp  test_TensorMeshHierarchy.cpp  test_TensorMeshHierarchyIteration.cpp  test_TensorMultilevelCoefficientQuantizer.cpp  test_TensorNorms.cpp  test_TensorProlongation.cpp  test_TensorQuantityOfInterest.cpp  test_TensorRestriction.cpp  test_blas.cpp  test_compress.cpp  test_compressors.cpp  test_decompose.cpp  test_format.cpp  test_quantize.cpp  test_shuffle.cpp  test_utilities.cpp
tests/mgard/src/unstructured/: test_EnumeratedMeshRange.cpp  test_IndicatorInput.cpp  test_LinearOperator.cpp  test_MassMatrix.cpp  test_MeshLevel.cpp  test_MultilevelCoefficientQuantizer.cpp  test_SituatedCoefficientRange.cpp  test_UniformEdgeFamilies.cpp  test_UniformMeshHierarchy.cpp  test_UniformMeshRefiner.cpp  test_UniformRestriction.cpp  test_estimators.cpp  test_indicators.cpp  test_measure.cpp  test_norms.cpp  test_pcg.cpp
tests/src/: test_CompressedDataset.cpp  test_LinearQuantizer.cpp  test_TensorMassMatrix.cpp  test_TensorMeshHierarchyIteration.cpp  test_TensorMultilevelCoefficientQuantizer.cpp  test_TensorNorms.cpp  test_TensorProlongation.cpp  test_TensorQuantityOfInterest.cpp  test_TensorRestriction.cpp  test_compress.cpp  test_format.cpp  test_utilities.cpp
tests/src/unstructured/: test_IndicatorInput.cpp  test_MeshHierarchy.cpp  test_MeshLevel.cpp  test_MeshRefiner.cpp  test_UniformMeshHierarchy.cpp  test_UniformMeshRefiner.cpp  test_data.cpp  test_estimators.cpp  test_indicators.cpp  test_norms.cpp
(+79 files in other folders)
